added a DOCKTYPE html and html page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>HTML revison</h1>
+        <a href="/tags/DOCKTYPE-html-&-html.html">DOCKTYPE html & html</a>
     </body>
 </html>
