--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     </head>
     <body>
         <h1>HTML revison</h1>
-        <a href="/tags/DOCKTYPE-html-&-html.html">DOCKTYPE html & html</a>
+        <table>
+            <tr>
+                <th>Title</th>
+                <th>Link</th>
+            </tr>
+            <tr>
+                <td>&lt;DOCKTYPE html&gt;</td>
+                <td><a href="/tags/DOCKTYPE-html-&-html.html">&lt;&gt;</a></td>
+            </tr>
+        </table>
     </body>
 </html>
