added a border to table

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>HTML revison</h1>
-        <table>
+        <table border="1">
             <tr>
                 <th>Title</th>
                 <th>Link</th>
