script and noscript page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 <td>&lt;DOCKTYPE html&gt;</td>
                 <td><a href="/tags/DOCKTYPE-html-&-html.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;script&gt; & &lt;noscript&gt;</th>
+                <td><a href="/tags/script-&-noscript.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
