--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <th>Link</th>
             </tr>
             <tr>
-                <td>&lt;DOCKTYPE html&gt;</td>
+                <td>&lt;DOCKTYPE html&gt; & &lt;html&gt;</td>
                 <td><a href="/tags/DOCKTYPE-html-&-html.html">&lt;&gt;</a></td>
             </tr>
             <tr>
