--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <th>&lt;script&gt; & &lt;noscript&gt;</th>
                 <td><a href="/tags/script-&-noscript.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;head&gt; & &lt;title&gt;</th>
+                <td><a href="/tags/head-&-title.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
