--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <th>&lt;head&gt; & &lt;title&gt;</th>
                 <td><a href="/tags/head-&-title.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;link /&gt; & &lt;meta&gt;</th>
+                <td><a href="/tags/link-&-meta.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
