--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <th>&lt;link /&gt; & &lt;meta&gt;</th>
                 <td><a href="/tags/link-&-meta.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;body&gt;</th>
+                <td><a href="/tags/body.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
