table, tr, th, td tags

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <th>&lt;body&gt;</th>
                 <td><a href="/tags/body.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;table&gt; & &lt;tr&gt; & &lt;th&lt; & &lt;td&gt;</th>
+                <td><a href="/tags/table-&-tr-&-th-&-td.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
