--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <th>Link</th>
             </tr>
             <tr>
-                <td>&lt;DOCKTYPE html&gt; & &lt;html&gt;</td>
-                <td><a href="/tags/DOCKTYPE-html-&-html.html">&lt;&gt;</a></td>
+                <td>&lt;DOCTYPE html&gt; & &lt;html&gt;</td>
+                <td><a href="/tags/DOCTYPE-html-&-html.html">&lt;&gt;</a></td>
             </tr>
             <tr>
                 <th>&lt;script&gt; & &lt;noscript&gt;</th>
