--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <th>&lt;table&gt; & &lt;tr&gt; & &lt;th&lt; & &lt;td&gt;</th>
                 <td><a href="/tags/table-&-tr-&-th-&-td.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;h1&gt; & &lt;h2&gt; & &lt;h3&gt; & &lt;h4&gt; & &lt;h5&gt; & &lt;h6&gt;</th>
+                <td><a href="/tags/h1-&-h2-&-h3-&-h4-&-h5-&-h6.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
