--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <th>&lt;h1&gt; & &lt;h2&gt; & &lt;h3&gt; & &lt;h4&gt; & &lt;h5&gt; & &lt;h6&gt;</th>
                 <td><a href="/tags/h1-&-h2-&-h3-&-h4-&-h5-&-h6.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;p&gt;</th>
+                <td><a href="/tags/p.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
