made a start on the br and hr tag

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                 <th>&lt;p&gt;</th>
                 <td><a href="/tags/p.html">&lt;&gt;</a></td>
             </tr>
+            <tr>
+                <th>&lt;br /&gt; & &lt;hr /&gt;</th>
+                <td><a href="/tags/br-&-hr.html">&lt;&gt;</a></td>
+            </tr>
         </table>
     </body>
 </html>
